refactor: TopicQueryService 메서드 명 수정